--- a/app/src/main/res/layout/activity_pathology_price.xml
+++ b/app/src/main/res/layout/activity_pathology_price.xml
@@ -40,7 +40,6 @@
         android:layout_marginVertical="@dimen/_10sdp"
         android:src="@drawable/ic_baseline_keyboard_backspace_24"
         />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -50,15 +49,12 @@
         >
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view1"
-            android:layout_marginVertical="@dimen/_30sdp"
-            android:layout_marginHorizontal="@dimen/_30sdp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_marginVertical="@dimen/_20sdp"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             >
-
         </androidx.recyclerview.widget.RecyclerView>
-
-
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
