--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -57,6 +57,7 @@
                 android:background="@drawable/round2"
                 android:id="@+id/name"
                 android:maxLines="1"
+                android:gravity="left|center"
                 android:textColorHint="#130F5D"
                 android:fontFamily="@font/frescaregular"
                 android:drawableRight="@drawable/ic_baseline_person_outline_24"
