--- a/app/src/main/res/layout/single_view_of_recycler_view.xml
+++ b/app/src/main/res/layout/single_view_of_recycler_view.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="@dimen/_20sdp"
+    android:padding="@dimen/_30sdp"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/_5sdp"
-    android:backgroundTint="#fff"
-    android:background="@drawable/round2"
+    android:backgroundTint="#f6f6ff"
+    android:elevation="@dimen/_20sdp"
     android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_5sdp"
+        android:backgroundTint="#f6f6ff"
+        android:layout_marginVertical="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        android:orientation="horizontal">
     <TextView
         android:id="@+id/Patname"
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:gravity="left"
         android:paddingVertical="@dimen/_10sdp"
         android:paddingHorizontal="@dimen/_10sdp"
-        android:layout_marginVertical="@dimen/_10sdp"
-        android:layout_marginHorizontal="@dimen/_10sdp"
         android:textColor="#130F5D"
         android:fontFamily="@font/frescaregular"
         android:text="HELLO"/>
@@ -23,13 +32,12 @@
         android:id="@+id/Patprice"
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:gravity="right|center"
         android:paddingVertical="@dimen/_10sdp"
         android:paddingHorizontal="@dimen/_10sdp"
-        android:layout_marginVertical="@dimen/_10sdp"
-        android:layout_marginHorizontal="@dimen/_10sdp"
         android:textColor="#130F5D"
         android:fontFamily="@font/frescaregular"
         android:text="HELLO"/>
 </LinearLayout>
+</androidx.cardview.widget.CardView>
